@@ -1,3 +1,7 @@
+1997-06-15  Thomas E. Dickey  <dickey@clark.net>
+
+	* src/dedview.c: check return-value of setsccreg()
+
 1997-02-11  Thomas E. Dickey  <dickey@clark.net>
 
 	* src/version.h:
